# ClickhouseRAG

./: .ci-ruff.toml  .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
clickhouse/: docker-compose.yml  init-clickhouse.sql
clickhouse/clickhouse-config/: config.xml  users.xml
clickhouserag/backup/: __init__.py  managers.py
clickhouserag/clickhouse/: __init__.py  base.py  clients.py  managers.py
clickhouserag/config/: __init__.py  base_config.py  clickhouse_config.py
clickhouserag/core/: __init__.py
clickhouserag/data_access/: __init__.py  abstract_client.py  abstract_table.py  clickhouse_client.py  clickhouse_table.py
clickhouserag/rag/: __init__.py  base.py  manager.py  managers.py  mixins.py
clickhouserag/utils/: __init__.py  connection.py  similarity.py
clickhouserag/vectorizers/: __init__.py  base.py  managers.py
examples/: basic_usage.py
tests/: conftest.py  test_clickhouse_client.py  test_clickhouse_table.py  test_rag_manager.py
