[tool.poetry]
name = "clickhouserag"
version = "0.1.0"
description = "A Python library for creating RAG with Clickhouse."
authors = ["Леонид Чесников <leonid.chesnikov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
clickhouse-connect = "^0.7.16"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.4"
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
