[tool.poetry]
name = "clickhouserag"
version = "0.2.0"
description = "A Python library for creating RAG with Clickhouse."
authors = ["Леонид Чесников <leonid.chesnikov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "<2.0.0"
clickhouse-driver = "^0.2.8"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.4"
pytest = "^8.3.1"
transformers = "^4.42.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = [
    "A",  # Pyflakes (checks for various errors)
    "B",  # pycodestyle (PEP 8)
    "E",  # pycodestyle (PEP 8)
    "F",  # Pyflakes (checks for various errors)
    "W",  # pycodestyle (PEP 8)
    "I",  # isort (import sorting)
    "C",  # McCabe (complexity)
    "N",  # pep8-naming (naming conventions)
    "PT", # flake8-pytest-style (pytest style)
    "Q",  # flake8-quotes (quote consistency)
    "T",  # flake8-debugger (debug statements)
]
lint.ignore = ["E501", "T201"]
fix = true

[tool.pylint.messages_control]
disable = ["one-blank-line-before-class", "multi-line-summary-first-line"]
enable = ["multi-line-summary-second-line"]

[tool.pytest.ini_options]
testpaths = ["tests"]